style: fix  top bar & send bar of message panel scroll out of view

--- a/app/internal_packages/edison-beijing-chat/styles/MessagesPanel.less
+++ b/app/internal_packages/edison-beijing-chat/styles/MessagesPanel.less
@@ -28,10 +28,10 @@
   }
 
   .split-panel {
-    flex-grow: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 100%;
   }
 
   .chatPanel {
